sapling/themes/sapling/assets/css/site.css
/* ... */
@media screen and (max-width: 500px) {
    #main {
        margin-left: 0.5em;
        margin-right: 0.5em;
    }
}

/*
====================================
 Content area
====================================
*/

#content {
    margin-top: 1em;
    margin-bottom: 1.4em;
}
#content.has_map {
    min-height: 340px;
}
/* Map detail view - we want map to have no margins. */
#main.mapdata_detail {
    margin-left: 0;
    margin-right: 0;
}
.mapdata_detail #content {
    margin-top: 0; 
    margin-bottom: 0;
}
/* Page edit view - we don't want margins. */
#main.page_form #content {
    margin-top: 0.9em; 
}

/*
====================================
 Header
====================================
*/


#header {
    background: #E8ECEF url(../img/header-bg.png) top left repeat;
    border: 1px solid #E8ECEF;
    border-bottom: 1px solid #DAE1E5;
}
#header_bar {
    margin-left: 1.5em;
    padding-left: 3.5em;
    min-height: 4.2em;
}
@media screen and (max-width: 500px) {
    #header {
        background: #fafafa url(../img/body-bg.png) top left repeat;
        border: none;
    }
    #header_bar {
        background: #E8ECEF url(../img/header-bg.png) top left repeat;
        margin: 0;
        margin-top: 3.5em;
        padding: 0;
        min-height: 0;
        width: 100%;
        border-bottom: 1px solid #DAE1E5;
    }
    #header_bar > div {
        margin: 0.5em;
    }
}
#header_bar a, #header_bar a:link {
    color: #444;
}
#header_bar a:hover {
    color: #111;
}
#header_bar .inner {
    margin-top: 0.5em;
}
/* Header is different on mapdata pages */
.mapdata #header_bar {
    padding-left: 3.5em;
    background: url(../img/map-icon.png) 0.95em 45% no-repeat;
}

#object_title {
    padding: 0;
    margin: 0;
    display: table-cell;
    vertical-align: top;
    padding-top: 0.4em;
}
#object_title a {
    text-decoration: none;
}
#object_subtitle {
    position: relative;
    margin-top: 0.3em;
    margin-left: 0;
    margin-bottom: 0.5em;
    font-size: 80%;
    color: #747474;
}
@media screen and (max-width: 500px) {
    #object_title {
      font-size: 150%;
      vertical-align: middle;
    }
}
#site_title {
    background: #fafafa url(../img/body-bg.png) top left repeat;
    min-height: 3.95em;
    padding-left: 1.5em;
    font-size: 130%;
    padding-top: 1em;
    margin: 0;
    border-bottom: 1px solid #E8ECEF; /* Check before removing this border -
        it's needed for the correct CSS margin/padding behavior.
        TODO: fix this. */
}
#site_title h1 {
    margin-bottom: 0;
}
#site_title img {
    margin-top: -0.4em;
    padding-bottom: 1.6em; /* make sure there's room for #nav */
}
#site_title a, #site_title a:link {
    text-decoration: none;
    color: #444
}
#site_title a:hover {
    color: #111;
}
@media screen and (max-width: 500px) {
    #site_title {
        margin: 0;
        padding: 0;
        width: 100%;
        border: none;
        clear: both;
        min-height: 0;
        position: relative;
        top: -2em;
    }
    #site_title h1 {
        margin: 0.3em;
    }
}
#object_actions {
    display: table-cell;
    height: 100%;
    padding-left: 1.5em;
    padding-top: 0.8em;
}
#object_actions ul {
    list-style-type: none;
    margin: 0;
}
#object_actions li {
    display: table-cell;
    vertical-align: middle;
}
#object_actions .button {
    margin-top: 0;
    margin-bottom: 0;
    margin-right: 0.5em;
}
#login_info {
    float: right;
    clear: right;
    text-align: right;
    margin-right: 2em;
    margin-top: 0.4em;
}
#login_info .welcome {
    float: left;
    margin-right: 0.8em;
}
@media screen and (max-width: 500px){
    #login_info {
        display: block;
        float: none;
        text-align: right;
        width: 100%;
        margin: 0;
        padding: 0;
    }
    #login_info > div {
        margin: 0.5em;
    }
}
#header .site_search {
    float: right;
    clear: right;
    margin-top: 0.6em;
    margin-right: 2em;
}
#header .site_search input {
    float: left;
}
#header .site_search input[type="text"], #header .site_search #id_q {
    padding: 0;
    height: 2em;
    width: 180px;
    font-size: 15px;
    line-height: 30px;
    background: #ffffff url(../img/magnifying_glass.png) no-repeat 10px 10px;
    padding-left: 30px;
    margin-right: 0.5em;
}
@media screen and (max-width: 500px) {
    #header {
        margin: 0;
        padding: 0;
    }
    #header .site_search {
        float: none;
        position: relative;
        top: 6em;
        padding-left: 0.5em;
        padding-right: 0.5em;
    }
}

@media screen and (max-width: 400px) {
    .site_search input[type="submit"] {
        display: none;
    }
    #header .site_search input[type="text"], #header .site_search #id_q {
        width: 100%;
    }
}
/*
====================================
 Map widget on a page
====================================
*/

/* The entire-map div */
#map {
    background: #E8ECEF url(../img/header-bg.png) top left repeat;
    padding: 10px 10px 4px 10px;
    border-bottom: 1px solid #DAE1E5;
    border-left: 1px solid #DAE1E5;
    border-right: 1px solid #DAE1E5;
    border-radius: 4px;
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px;
    float: right;
    margin-top: -1.2em;
    margin-left: 1em;
    margin-bottom: 0.8em;
}
#map a, #map a:link {
    color: #444;
}
#map a:hover {
    color: #111;
}
/* Just the widget. Contained in #map. */
.mapwidget.small {
  border: 1px solid #b5b5b5;
  width: 400px!important;
  height: 300px!important;
}
#map .info {
  padding-top: 0.3em;
  padding-bottom: 0.15em;

}
#map .info a {
  background-image: url(../img/magnifying_glass.png);
  background-repeat: no-repeat;
  background-position: 9px 50%;
  padding-left: 25px;
  font-size: 90%;
}

/* Overview map */
.mapdata #results_pane {
  background: #E8ECEF url(../img/header-bg.png) top left repeat;
  padding-top: 1em;
  padding-left: 2em;
  padding-right: 2em;
  width: 15em;
  margin-top: -2px;
  border-right: 1px solid #DAE1E5;
}
/* ... */

